animations to fragments

--- a/app/src/main/res/layout/fragment_task.xml
+++ b/app/src/main/res/layout/fragment_task.xml
@@ -23,23 +23,23 @@
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:background="@drawable/round_button"
+            app:backgroundTint="@color/myTeal"
             android:text="+"
             android:textSize="20sp"
+            android:gravity="center"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.498"
             app:layout_constraintStart_toStartOf="parent" />
-
         <EditText
             android:id="@+id/taskInput"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="36dp"
             android:height="48dp"
             android:hint="Your next task :)"
             android:imeOptions="actionDone"
             android:inputType="text"
-            app:layout_constraintBottom_toTopOf="@+id/addTask"
+            app:layout_constraintBottom_toBottomOf="@+id/taskList"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.498"
             app:layout_constraintStart_toStartOf="parent"
