color change to peach

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="myTeal">#16B1BF</color>
+    <color name="peach_darker">#ffb58c</color>
+    <color name="peach_lighter">#ffc7a3</color>
 </resources>
