--- a/app/src/main/res/drawable/custom_button.xml
+++ b/app/src/main/res/drawable/custom_button.xml
@@ -1,48 +1,19 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<layer-list xmlns:android="http://schemas.android.com/apk/res/android" >
+<?xml version="1.0" encoding="utf-8"?>
+    <inset xmlns:android="http://schemas.android.com/apk/res/android"
+        android:insetLeft="10dp"
+        android:insetBottom="5dp"
+        android:insetTop="5dp"
+        android:insetRight="10dp" >
 
-    <!-- Colored rectangle-->
-    <item>
-        <shape android:shape="rectangle">
-            <padding android:top="35dp"/>
-            <size android:width="100dp" android:height="40dp" />
-            <solid android:color="#13a89e" />
-        </shape>
-    </item>
-    <!-- Darker colored line-->
-    <item>
-        <shape android:shape="line">
-            <size android:width="200dp"/>
-            <stroke android:width="4dp" android:color="#123456" />
-        </shape>
-    </item>
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle" > <corners android:radius="8dp" />
+    <gradient
+        android:angle="315"
+        android:endColor="@color/peach_lighter"
+        android:startColor="@color/peach_darker" />
 
 
-    <!-- This rectangle for the right side -->
-    <!-- Their color should be the same as layout's background -->
-    <item
-        android:right="-200dp"
-        android:left="200dp"
-        android:top="-200dp"
-        android:bottom="-200dp">
-        <rotate android:fromDegrees="45">
-            <shape android:shape="rectangle">
-                <padding android:top="-35dp"/>
-                <solid android:color="#ffffff" />
-            </shape>
-        </rotate>
-    </item>
-    <!-- This rectangle for the left side -->
-    <item
-        android:right="200dp"
-        android:left="-200dp"
-        android:top="-200dp"
-        android:bottom="-200dp">
-        <rotate android:fromDegrees="-45">
-            <shape android:shape="rectangle">
-                <padding android:top="-35dp"/>
-                <solid android:color="#ffffff" />
-            </shape>
-        </rotate>
-    </item>
-</layer-list>
+    <padding android:left="20dp" android:top="20dp"
+        android:right="20dp" android:bottom="20dp" />
+</shape>
+</inset>
