--- a/app/src/main/res/layout/fragment_task.xml
+++ b/app/src/main/res/layout/fragment_task.xml
@@ -14,6 +14,7 @@
             android:id="@+id/taskList"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_marginTop="5dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -23,7 +24,7 @@
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:background="@drawable/round_button"
-            app:backgroundTint="@color/myTeal"
+            app:backgroundTint="@color/peach_darker"
             android:text="+"
             android:textSize="20sp"
             android:gravity="center"
