--- a/app/src/main/res/layout/todo_item.xml
+++ b/app/src/main/res/layout/todo_item.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:background="@drawable/custom_button"
     android:padding="16dp"
     android:layout_width="match_parent"
     android:layout_height="80dp">
@@ -18,6 +19,8 @@
 
     <CheckBox
         android:id="@+id/taskCheckBox"
+        android:theme="@style/CheckBoxTheme"
+        android:textColorHighlight="@color/black"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
