delete completed tasks, edittext visual tweak

--- a/app/src/main/res/layout/fragment_task.xml
+++ b/app/src/main/res/layout/fragment_task.xml
@@ -37,9 +37,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:height="48dp"
-            android:hint="Your next task :)"
+            android:hint="@string/taskHint"
             android:imeOptions="actionDone"
             android:inputType="text"
+            android:textColorHint="@color/hint_color"
+            android:background="@drawable/custom_edit_text"
             app:layout_constraintBottom_toBottomOf="@+id/taskList"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.498"
