--- a/app/src/main/res/drawable/custom_button.xml
+++ b/app/src/main/res/drawable/custom_button.xml
@@ -5,8 +5,7 @@
         android:insetTop="5dp"
         android:insetRight="10dp" >
 
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle" > <corners android:radius="8dp" />
+<shape android:shape="rectangle" > <corners android:radius="8dp" />
     <gradient
         android:angle="315"
         android:endColor="@color/peach_lighter"
