--- a/app/src/main/res/layout/fragment_task.xml
+++ b/app/src/main/res/layout/fragment_task.xml
@@ -32,6 +32,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.498"
             app:layout_constraintStart_toStartOf="parent" />
+
         <EditText
             android:id="@+id/taskInput"
             android:layout_width="wrap_content"
@@ -46,8 +47,35 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.498"
             app:layout_constraintStart_toStartOf="parent"
-            tools:ignore="TouchTargetSizeCheck"
-            android:autofillHints="" />
+            tools:ignore="TouchTargetSizeCheck"/>
+        <EditText
+            android:id="@+id/descriptionInput"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:height="48dp"
+            android:hint="@string/descriptionHint"
+            android:imeOptions="actionDone"
+            android:inputType="text"
+            android:textColorHint="@color/hint_color"
+            android:background="@drawable/custom_edit_text"
+            app:layout_constraintBottom_toBottomOf="@+id/taskList"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.498"
+            app:layout_constraintStart_toStartOf="parent"
+            tools:ignore="TouchTargetSizeCheck"/>
+
+        <Button
+            android:id="@+id/addDescription"
+            android:layout_width="100dp"
+            android:layout_height="60dp"
+            android:textSize="8sp"
+            android:gravity="center"
+            android:textColor="@color/peach_darker"
+            android:background="@android:color/transparent"
+            android:drawableLeft="@drawable/description_icon"
+            android:drawableTint="@color/peach_darker"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/taskInput" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </FrameLayout>
