--- a/app/src/main/res/layout/todo_item.xml
+++ b/app/src/main/res/layout/todo_item.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:background="@drawable/custom_button"
     android:padding="16dp"
     android:layout_width="match_parent"
@@ -8,9 +9,9 @@
 
     <TextView
         android:id="@+id/taskTitle"
-        android:layout_width="190dp"
+        android:layout_width="300dp"
         android:layout_height="match_parent"
-        android:textSize="20sp"
+        android:textSize="22sp"
         android:gravity="center_vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -20,11 +21,14 @@
 
     <TextView
         android:id="@+id/taskDescription"
-        android:layout_width="130dp"
+        android:layout_width="300dp"
         android:layout_height="match_parent"
-        android:textSize="12sp"
+        android:textSize="18sp"
+        android:textStyle="italic"
+        android:maxLength="70"
+        android:gravity="center_vertical"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/taskTitle"
+        app:layout_constraintStart_toStartOf="@+id/taskTitle"
         app:layout_constraintTop_toTopOf="parent" />
 
     <CheckBox
