--- a/app/src/main/res/layout/completed_item.xml
+++ b/app/src/main/res/layout/completed_item.xml
@@ -2,17 +2,30 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@drawable/custom_button"
-    android:padding="16dp"
     android:layout_width="match_parent"
     android:layout_height="80dp">
 
     <TextView
         android:id="@+id/taskTitle"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:textSize="20sp"
+        android:layout_width="300dp"
+        android:layout_height="match_parent"
+        android:textSize="22sp"
+        android:gravity="center_vertical"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@+id/taskCheckBox"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <CheckBox
+        android:id="@+id/taskCheckBox"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:textColorHighlight="@color/black"
+        android:theme="@style/CheckBoxTheme"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
