--- a/app/src/main/res/menu/options_menu.xml
+++ b/app/src/main/res/menu/options_menu.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:id="@+id/settings"
+    <item android:id="@+id/settings_all"
         android:icon="@drawable/trash_icon"
-        android:title="@string/settings" />
+        android:title="@string/settings_all" />
+    <item android:id="@+id/settings_selected"
+        android:icon="@drawable/trash_icon"
+        android:title="@string/settings_selected" />
 </menu>
