edit text max width and button colors darker

--- a/app/src/main/res/layout/fragment_task.xml
+++ b/app/src/main/res/layout/fragment_task.xml
@@ -37,10 +37,11 @@
             android:id="@+id/taskInput"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:maxWidth="220dp"
             android:height="48dp"
             android:hint="@string/taskHint"
             android:imeOptions="actionDone"
-            android:inputType="text"
+            android:inputType="textCapSentences"
             android:textColorHint="@color/hint_color"
             android:background="@drawable/custom_edit_text"
             app:layout_constraintBottom_toBottomOf="@+id/taskList"
@@ -54,9 +55,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:height="48dp"
+            android:maxWidth="220dp"
             android:hint="@string/descriptionHint"
             android:imeOptions="actionDone"
-            android:inputType="text"
+            android:inputType="textCapSentences"
             android:textColorHint="@color/hint_color"
             android:background="@drawable/custom_edit_text"
             app:layout_constraintBottom_toBottomOf="@+id/taskList"
@@ -70,8 +72,8 @@
             android:layout_width="100dp"
             android:layout_height="60dp"
             android:background="@android:color/transparent"
-            android:drawableLeft="@drawable/description_icon"
-            android:drawableTint="@color/peach_darker"
+            android:drawableStart="@drawable/description_icon"
+            android:drawableTint="@color/peach_darkest"
             android:gravity="center"
             android:textColor="@color/peach_darker"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -83,8 +85,8 @@
             android:layout_height="60dp"
             android:layout_marginEnd="300dp"
             android:background="@android:color/transparent"
-            android:drawableLeft="@drawable/task_icon"
-            android:drawableTint="@color/peach_darker"
+            android:drawableStart="@drawable/task_icon"
+            android:drawableTint="@color/peach_darkest"
             android:gravity="center"
             android:textColor="@color/peach_darker"
             app:layout_constraintBottom_toBottomOf="parent"
