--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="myTeal">#16B1BF</color>
+    <color name="peach_darkest">#ffc09c</color>
     <color name="peach_darker">#ffcbad</color>
     <color name="peach_lighter">#ffd0b5</color>
     <color name="et_color_lighter">#ffffff</color>
