--- a/app/src/main/res/layout/fragment_task.xml
+++ b/app/src/main/res/layout/fragment_task.xml
@@ -13,11 +13,14 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/taskList"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="0dp"
             android:layout_marginTop="5dp"
+            android:focusableInTouchMode="true"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent">
+
+        </androidx.recyclerview.widget.RecyclerView>
 
         <Button
             android:id="@+id/addTask"
@@ -44,7 +47,7 @@
             android:inputType="textCapSentences"
             android:textColorHint="@color/hint_color"
             android:background="@drawable/custom_edit_text"
-            app:layout_constraintBottom_toBottomOf="@+id/taskList"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.498"
             app:layout_constraintStart_toStartOf="parent"
@@ -61,7 +64,7 @@
             android:inputType="textCapSentences"
             android:textColorHint="@color/hint_color"
             android:background="@drawable/custom_edit_text"
-            app:layout_constraintBottom_toBottomOf="@+id/taskList"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.498"
             app:layout_constraintStart_toStartOf="parent"
@@ -75,7 +78,6 @@
             android:drawableStart="@drawable/description_icon"
             android:drawableTint="@color/peach_darkest"
             android:gravity="center"
-            android:textColor="@color/peach_darker"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
 
@@ -83,14 +85,22 @@
             android:id="@+id/showTaskInput"
             android:layout_width="100dp"
             android:layout_height="60dp"
-            android:layout_marginEnd="300dp"
             android:background="@android:color/transparent"
             android:drawableStart="@drawable/task_icon"
             android:drawableTint="@color/peach_darkest"
             android:gravity="center"
-            android:textColor="@color/peach_darker"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
+
+<!--        <Space-->
+<!--            android:id="@+id/space"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            app:layout_constraintBottom_toTopOf="@id/addTask"-->
+<!--            app:layout_constraintStart_toStartOf="parent"-->
+<!--            app:layout_constraintTop_toBottomOf="@id/taskList"-->
+<!--            app:layout_constraintEnd_toEndOf="parent"/>-->
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
