--- a/app/src/main/res/layout/fragment_task.xml
+++ b/app/src/main/res/layout/fragment_task.xml
@@ -75,7 +75,7 @@
             android:layout_width="100dp"
             android:layout_height="60dp"
             android:background="@android:color/transparent"
-            android:drawableStart="@drawable/description_icon"
+            android:drawableLeft="@drawable/description_icon"
             android:drawableTint="@color/peach_darkest"
             android:gravity="center"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -86,7 +86,7 @@
             android:layout_width="100dp"
             android:layout_height="60dp"
             android:background="@android:color/transparent"
-            android:drawableStart="@drawable/task_icon"
+            android:drawableLeft="@drawable/task_icon"
             android:drawableTint="@color/peach_darkest"
             android:gravity="center"
             app:layout_constraintBottom_toBottomOf="parent"
