back task back to task list, checked by default, hint if no tasks

--- a/app/src/main/res/menu/options_menu.xml
+++ b/app/src/main/res/menu/options_menu.xml
@@ -6,4 +6,7 @@
     <item android:id="@+id/settings_selected"
         android:icon="@drawable/trash_icon"
         android:title="@string/settings_selected" />
+    <item android:id="@+id/settings_move_back"
+        android:icon="@drawable/trash_icon"
+        android:title="@string/settings_move_back" />
 </menu>
