--- a/app/src/main/res/layout/fragment_task.xml
+++ b/app/src/main/res/layout/fragment_task.xml
@@ -92,14 +92,24 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
-<!--        <Space-->
-<!--            android:id="@+id/space"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            app:layout_constraintBottom_toTopOf="@id/addTask"-->
-<!--            app:layout_constraintStart_toStartOf="parent"-->
-<!--            app:layout_constraintTop_toBottomOf="@id/taskList"-->
-<!--            app:layout_constraintEnd_toEndOf="parent"/>-->
+        <TextView
+            android:id="@+id/emptyTaskHint"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/empty_task_hint"
+            android:textColor="@color/description_font"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/taskList" />
+
+<!--        <TextureView-->
+<!--        android:id="@+id/space"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        app:layout_constraintBottom_toTopOf="@id/addTask"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toBottomOf="@id/taskList"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"/>-->
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
