--- a/app/src/main/res/layout/fragment_completed.xml
+++ b/app/src/main/res/layout/fragment_completed.xml
@@ -6,7 +6,7 @@
     tools:context=".TaskFragment">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/completedList"
+        android:id="@+id/completedTaskList"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
