--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,5 +14,5 @@
     <color name="et_color_lighter">#ffffff</color>
     <color name="et_color_darker">#ffefeb</color>
     <color name="hint_color">#ffbba6</color>
-    <color name="description_font">#dbdbdb</color>
+    <color name="details_font">#dbdbdb</color>
 </resources>
