--- a/app/src/main/res/layout/fragment_task.xml
+++ b/app/src/main/res/layout/fragment_task.xml
@@ -27,7 +27,7 @@
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:background="@drawable/round_button"
-            app:backgroundTint="@color/peach_darker"
+            app:backgroundTint="@color/theme_darker"
             android:text="@string/add_button_plus"
             android:textSize="20sp"
             android:gravity="center"
@@ -76,7 +76,7 @@
             android:layout_height="60dp"
             android:background="@android:color/transparent"
             android:drawableLeft="@drawable/details_icon"
-            android:drawableTint="@color/peach_darkest"
+            android:drawableTint="@color/theme_darkest"
             android:gravity="center"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
@@ -87,7 +87,7 @@
             android:layout_height="60dp"
             android:background="@android:color/transparent"
             android:drawableLeft="@drawable/task_icon"
-            android:drawableTint="@color/peach_darkest"
+            android:drawableTint="@color/theme_darkest"
             android:gravity="center"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
@@ -101,16 +101,6 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@+id/taskList" />
-
-<!--        <TextureView-->
-<!--        android:id="@+id/space"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="0dp"-->
-<!--        app:layout_constraintBottom_toTopOf="@id/addTask"-->
-<!--        app:layout_constraintStart_toStartOf="parent"-->
-<!--        app:layout_constraintTop_toBottomOf="@id/taskList"-->
-<!--        app:layout_constraintEnd_toEndOf="parent"/>-->
-
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
