--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,11 +8,11 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="myTeal">#16B1BF</color>
-    <color name="peach_darkest">#ffc09c</color>
-    <color name="peach_darker">#ffcbad</color>
-    <color name="peach_lighter">#ffd0b5</color>
+    <color name="theme_darkest">#1b877d</color>
+    <color name="theme_darker">#28a69a</color>
+    <color name="theme_lighter">#31b5a8</color>
     <color name="et_color_lighter">#ffffff</color>
-    <color name="et_color_darker">#ffefeb</color>
-    <color name="hint_color">#ffbba6</color>
+    <color name="et_color_darker">#bffff9</color>
+    <color name="hint_color">#3fd4c5</color>
     <color name="details_font">#dbdbdb</color>
 </resources>
