--- a/app/src/main/res/layout/todo_item.xml
+++ b/app/src/main/res/layout/todo_item.xml
@@ -1,46 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:background="@drawable/custom_button"
     android:padding="16dp"
     android:layout_width="match_parent"
-    android:layout_height="80dp">
+    android:layout_height="wrap_content">
 
     <TextView
         android:id="@+id/taskTitle"
-        android:layout_width="300dp"
-        android:layout_height="match_parent"
+        android:layout_toEndOf="@+id/taskCheckBox"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:textSize="22sp"
         android:gravity="center_vertical"
-        android:textColor="@color/white"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/taskCheckBox"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:textColor="@color/white"/>
 
     <TextView
         android:id="@+id/taskDetails"
-        android:layout_width="300dp"
-        android:layout_height="match_parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_toEndOf="@+id/taskCheckBox"
         android:textSize="18sp"
         android:textStyle="italic"
-        android:maxLength="70"
         android:textColor="@color/details_font"
-        android:gravity="center_vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/taskTitle"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:gravity="center_vertical"/>
 
     <CheckBox
         android:id="@+id/taskCheckBox"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:gravity="center_vertical"
+        android:layout_centerInParent="true"
         android:layout_marginStart="16dp"
         android:textColorHighlight="@color/black"
-        android:theme="@style/CheckBoxTheme"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:theme="@style/CheckBoxTheme"/>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
