Fixing edit title/details bug
The issue was that upon changing a task title or details, i was setting a new editorActionListener e.g. I change title of task 2 and then i try to add a new task, that task would now overwrite task two instead of adding a new object to the list, in the future, i should work on removing these listeners instead of working on additional EditTexts

--- a/app/src/main/res/layout/fragment_task.xml
+++ b/app/src/main/res/layout/fragment_task.xml
@@ -67,6 +67,36 @@
             app:layout_constraintStart_toStartOf="parent"
             tools:ignore="TouchTargetSizeCheck"/>
 
+        <EditText
+            android:id="@+id/editTitleInput"
+            android:layout_width="220dp"
+            android:layout_height="wrap_content"
+            android:height="48dp"
+            android:imeOptions="actionDone"
+            android:inputType="textCapSentences"
+            android:textColorHint="@color/hint_color"
+            android:background="@drawable/custom_edit_text"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.498"
+            app:layout_constraintStart_toStartOf="parent"
+            tools:ignore="TouchTargetSizeCheck"/>
+
+        <EditText
+            android:id="@+id/editDetailsInput"
+            android:layout_width="220dp"
+            android:layout_height="wrap_content"
+            android:height="48dp"
+            android:imeOptions="actionDone"
+            android:inputType="textCapSentences"
+            android:textColorHint="@color/hint_color"
+            android:background="@drawable/custom_edit_text"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.498"
+            app:layout_constraintStart_toStartOf="parent"
+            tools:ignore="TouchTargetSizeCheck"/>
+
         <Button
             android:id="@+id/showDetailsInput"
             android:layout_width="100dp"
